test/compile-fail/invalid_let.lisp
; invalid let
(let (x 5) (* x 2))